--- a/styles/less/variables.less
+++ b/styles/less/variables.less
@@ -5,5 +5,5 @@
 @brand-danger: #e74c3c;
 @gray-darkest: #222;
 @gray: #333;
-@gray-lighter: #f7f7f7;
+@gray-lighter: rgb(233, 234, 237);
 @placeholder-text: #bbbbbb;
