--- a/styles/less/variables.less
+++ b/styles/less/variables.less
@@ -1,7 +1,7 @@
 // Variables
 
-@brand-primary: #4053ae;
-@brand-primary-dark: #010025;
+@brand-primary: #fa9e27;
+@brand-primary-dark: #442805;
 @brand-danger: #e74c3c;
 @gray-darkest: #222;
 @gray: #333;
