--- a/styles/css/less/style.css
+++ b/styles/css/less/style.css
@@ -1,12 +1,28 @@
+@font-face {
+  font-family: BrushScriptStd;
+  src: url("/fonts/BrushScriptStd.otf");
+}
+@font-face {
+  font-family: SegoeUI;
+  src: url("/fonts/segoeui.otf");
+}
+@font-face {
+  font-family: "SegoeUI SemiLight";
+  src: url("/fonts/segoeuisl.otf");
+}
+@font-face {
+  font-family: "SegoeUI SemiBold";
+  src: url("/fonts/segoeuisb.otf");
+}
 body {
   overflow-x: hidden;
-  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: SegoeUI, sans-serif;
 }
 .text-muted {
   color: #333333;
 }
 .text-primary {
-  color: #4053ae;
+  color: #fa9e27;
 }
 p {
   font-size: 14px;
@@ -23,13 +39,13 @@ a.active {
   outline: none;
 }
 a {
-  color: #4053ae;
+  color: #fa9e27;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #324189;
+  color: #e98605;
 }
 h1,
 h2,
@@ -37,80 +53,113 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
+  font-family: "SegoeUI SemiBold", sans-serif;
 }
 h2 {
   padding-top: 20px;
-  background: #171e3e;
+  background: #854c03;
   text-align: center;
   height: 100px;
   color: white;
   font-style: italic;
 }
+.btn-primary {
+  color: white;
+  background-color: #fa9e27;
+  border-color: #fa9e27;
+  font-family: "SegoeUI SemiBold", sans-serif;
+}
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  color: white;
+  background-color: #e98605;
+  border-color: #df8005;
+}
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  background-image: none;
+}
+.btn-primary.disabled,
+.btn-primary[disabled],
+fieldset[disabled] .btn-primary,
+.btn-primary.disabled:hover,
+.btn-primary[disabled]:hover,
+fieldset[disabled] .btn-primary:hover,
+.btn-primary.disabled:focus,
+.btn-primary[disabled]:focus,
+fieldset[disabled] .btn-primary:focus,
+.btn-primary.disabled:active,
+.btn-primary[disabled]:active,
+fieldset[disabled] .btn-primary:active,
+.btn-primary.disabled.active,
+.btn-primary[disabled].active,
+fieldset[disabled] .btn-primary.active {
+  background-color: #fa9e27;
+  border-color: #fa9e27;
+}
+.btn-primary .badge {
+  color: #fa9e27;
+  background-color: white;
+}
 .img-centered {
   margin: 0 auto;
 }
-.bg-light-gray {
-  background-color: #e9eaed;
-}
-.bg-darkest-gray {
-  background-color: #222222;
-}
 .navbar-default {
-  background-color: #010025;
+  background-color: transparent;
   border-color: transparent;
 }
 .navbar-default .navbar-brand {
-  color: #4053ae;
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  color: #fa9e27;
+  font-family: "SegoeUI SemiBold", sans-serif;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-  color: #324189;
+  color: #e98605;
 }
 .navbar-default .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-default .navbar-toggle {
-  background-color: #4053ae;
-  border-color: #4053ae;
+  background-color: #fa9e27;
+  border-color: #fa9e27;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: white;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #4053ae;
+  background-color: #fa9e27;
 }
 .navbar-default .nav li a {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
+  font-family: "SegoeUI SemiLight", sans-serif;
   font-weight: 400;
   letter-spacing: 1px;
   color: white;
 }
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
-  color: #4053ae;
+  color: #fa9e27;
   outline: none;
 }
 .navbar-default .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #4053ae;
+  background-color: #fa9e27;
 }
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #324189;
+  background-color: #e98605;
 }
 @media (min-width: 768px) {
   .navbar-default {
-    background-color: #010025;
+    background-color: transparent;
     padding: 25px 0;
     -webkit-transition: padding 0.3s;
     -moz-transition: padding 0.3s;
@@ -137,48 +186,32 @@ h2 {
 header {
   text-align: center;
   color: white;
-  background-color: #010025;
+  background: url('images/launching-soon.jpg') no-repeat;
+  background-size: 100%;
+  background-color: #442805;
   height: 100%;
 }
 header .intro-text {
-  padding-top: 100px;
+  padding-top: 130px;
   padding-bottom: 50px;
 }
-header .intro-text .intro-lead-in {
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: italic;
-  font-size: 22px;
-  line-height: 22px;
-  margin-bottom: 25px;
+header .intro-text h1 {
+  font-family: BrushScriptStd, cursive;
+  font-size: 76px;
+  margin-bottom: 90px;
+  text-transform: capitalize;
+  font-weight: lighter;
 }
-header .intro-text .intro-heading {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 50px;
-  line-height: 50px;
-  margin-bottom: 25px;
+header .intro-text p {
+  font-family: "SegoeUI SemiLight", sans-serif;
+  font-size: 40px;
+  margin-bottom: 40px;
 }
-@media (min-width: 768px) {
-  header .intro-text {
-    padding-top: 250px;
-    padding-bottom: 200px;
-  }
-  header .intro-text .intro-lead-in {
-    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-style: italic;
-    font-size: 40px;
-    line-height: 40px;
-    margin-bottom: 25px;
-  }
-  header .intro-text .intro-heading {
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 75px;
-    line-height: 75px;
-    margin-bottom: 50px;
-  }
+#search-bar input,
+#search-bar button {
+  height: 70px;
+  padding: 10px 20px;
+  font-size: 20px;
 }
 #results .portfolio-item .portfolio-caption {
   max-width: 400px;
@@ -240,7 +273,7 @@ header .intro-text .intro-heading {
   text-align: center;
 }
 .artist-detail .artist-image h2 {
-  background: rgba(23, 30, 62, 0.6);
+  background: rgba(133, 76, 3, 0.6);
 }
 .artist-detail .artist-item h4 {
   background: white;
@@ -276,7 +309,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #4053ae;
+  background-color: #fa9e27;
 }
 .btn:focus,
 .btn:active,
@@ -289,11 +322,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #4053ae;
+  background: #fa9e27;
 }
 ::selection {
   text-shadow: none;
-  background: #4053ae;
+  background: #fa9e27;
 }
 img::selection {
   background: transparent;
@@ -303,11 +336,11 @@ img::-moz-selection {
 }
 body,
 html {
-  webkit-tap-highlight-color: #4053ae;
+  webkit-tap-highlight-color: #fa9e27;
   height: 100%;
   background: #e9eaed;
 }
 #hide-search-bar {
   height: 100%;
-  background-color: #010025;
+  background-color: #442805;
 }
