--- a/styles/css/less/style.css
+++ b/styles/css/less/style.css
@@ -187,18 +187,21 @@ header {
   text-align: center;
   color: white;
   background: url('images/launching-soon.jpg') no-repeat;
-  background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
   background-color: #201404;
-  height: 100%;
+  min-height: 100%;
 }
 header .intro-text {
-  padding-top: 130px;
+  padding-top: 110px;
   padding-bottom: 50px;
 }
 header .intro-text h1 {
   font-family: BrushScriptStd, cursive;
-  font-size: 76px;
-  margin-bottom: 90px;
+  font-size: 110px;
+  margin-bottom: 70px;
   text-transform: capitalize;
   font-weight: lighter;
 }
@@ -206,6 +209,15 @@ header .intro-text p {
   font-family: "SegoeUI SemiLight", sans-serif;
   font-size: 40px;
   margin-bottom: 40px;
+}
+header .intro-text .copyright {
+  font-family: SegoeUI, sans-serif;
+  font-size: 12px;
+  margin-bottom: 25px;
+}
+#search-bar {
+  height: 70px;
+  margin-bottom: 245px;
 }
 #search-bar input,
 #search-bar button {
@@ -300,26 +312,37 @@ header .intro-text p {
   padding-bottom: 20px;
 }
 ul.social-buttons {
-  margin-bottom: 0;
+  margin: 0 auto 40px;
+  width: 150px;
+  height: 32px;
+  padding: 0;
 }
-ul.social-buttons li a {
+ul.social-buttons li {
   display: block;
-  background-color: #222222;
-  height: 40px;
-  width: 40px;
-  border-radius: 100%;
-  font-size: 20px;
-  line-height: 40px;
-  color: white;
-  outline: none;
+  height: 32px;
+  width: 32px;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
+  float: left;
+  margin: 0 9px;
 }
-ul.social-buttons li a:hover,
-ul.social-buttons li a:focus,
-ul.social-buttons li a:active {
+ul.social-buttons li:hover,
+ul.social-buttons li:focus,
+ul.social-buttons li:active {
   background-color: #fa9e27;
+}
+ul.social-buttons .facebook {
+  background: url('images/facebook.png') no-repeat;
+  background-size: 100%;
+}
+ul.social-buttons .twitter {
+  background: url('images/twitter.png') no-repeat;
+  background-size: 100%;
+}
+ul.social-buttons .rss {
+  background: url('images/RSS.png') no-repeat;
+  background-size: 100%;
 }
 .btn:focus,
 .btn:active,
